# Projects

./: README.md
Bomberman/lab3/: pom.xml
ChatApp/lab5_client/: pom.xml
ChatApp/lab5_client/src/main/java/: module-info.java
ChatApp/lab5_server/: pom.xml
ChatApp/lab5_server/src/main/java/server/: Broadcaster.java  ClientHandler.java  ClientReader.java  ClientWriter.java  FileManager.java  IBroadcaster.java  IClientHandler.java  IFileManager.java  ILoginManager.java  LoginManager.java  Server.java  Ticker.java
ChatApp/lab5_server/src/main/java/server/protocol/: XMLHandler.java
ChatApp/lab5_server/src/main/java/server/protocol/auxiliary/: User.java
ChatApp/lab5_server/src/main/java/server/protocol/events/: DownloadSuccess.java  (+9 more)
Factory/lab4/: pom.xml
Factory/lab4/src/main/java/: module-info.java
MPI&OpenMP/pract1/: var2  var2.cpp  var3.cpp
MPI&OpenMP/pract2/: TIME.txt  acceleration.txt  efficiency.txt  main  main.c  parallel  parallel.c  rand_linear  rand_linear.c  rand_parallel  rand_parallel.c  test  test.c  time.txt
MPI&OpenMP/pract3/: dynamic_timing.txt  guided_timing.txt  main  main.c  main_acceleration.txt  main_efficiency.txt  main_timing.txt  static_timing.txt
MPI&OpenMP/pract4/: CMakeLists.txt  main  main.c
MPI&OpenMP/pract4/data/: times.txt
MPI&OpenMP/pract5/: a.txt  e.txt  main  main.c  seq  seq.c  time.txt
MPI&OpenMP/pract6/: CMakeLists.txt  main  main.c  time.txt
SoundProcessor/lab2/: CMakeLists.txt  CommandsReader.cpp  ExceptionsHierarchy.cpp  MixConvertor.cpp  MuteConvertor.cpp  WaveReader.cpp  Writer.cpp  main.cpp  wavefc.h
(+70 files in other folders)
